--- a/css/indexPlus.less
+++ b/css/indexPlus.less
@@ -1,3 +1,31 @@
+.flexBlock{
+	display: flex;
+	display: -webkit-box; 
+   display: -moz-box;  
+   display: -ms-flexbox; 
+   display: -webkit-flex; 
+}
+.flex1{
+   flex: 1
+}
+.inlineBlock{
+	display: inline-block;
+}
+.clear{
+	clear: both;
+}
+.floatLeft{
+	float: left;
+}
+.floatRight{
+	float: right;
+}
+.alignRight{
+	text-align: right!important;
+}
+.icon{
+	display: inline-block;
+}
 .navLi{
 	padding-top:7px;
 	img{
@@ -18,13 +46,107 @@
 		position: relative;
 	}
 }
-.num.rank2 {
-	.canvasFont{
-		width: 120px;
-		color:#ffffff;
-		position: absolute;
-		bottom: 60px;
-		z-index: 2;
+.right_des{
+	width:300px;
+	.name{
+		font-size: 18px;
+		line-height: 22px;
+		margin-top: 7px;
+		color: #333;
+		padding-top: 7px;
 		text-align: center;
-  	}
+	}
+	.dec_ul{
+		margin-top: 58px;
+		padding:0 35px;
+		.dec_li{
+			margin-top: 30px;
+			height: 52px;
+			line-height: 26px;
+			font-size: 14px;
+		}
+	}
+	.orange{
+		color:#ff9900;
+	}
 }
+.pieTu_con{
+	.pieTu_con_center{
+		width:170px;
+		margin: 0 auto;
+	}
+   .CompRateCanvas{
+	   width: 170px;
+	   height:170px;
+	   margin-bottom:18px;
+	   margin-top: 23px;
+   }
+   .PieTuDes{
+	   font-weight: 700;
+	   line-height: 30px;
+	   
+   }
+}
+
+.downIcon,.upIcon{
+	width: 11px;
+	height: 13px;	
+	margin-right: 5px;
+    position: relative;
+    top: 9px;
+}
+.downIcon{
+	background: url(../images/index/yyl_down.png) no-repeat;
+	background-size:100% 100%;
+}
+.upIcon{
+	background: url(../images/index/yyl_up.png) no-repeat;
+	background-size:100% 100%;
+}
+/*声环境质量*/
+.water-left,.noise-left  {
+	width: 55%;
+}
+
+.water-right ,.noise-right {
+	width: 45%;
+}
+
+.noise-info1{
+	height: 310px;
+}
+.rightDes{
+	width:260px;
+	border-left:1px solid #e3e3e3;
+	.noiseList{
+       
+	}
+	.noiseLi{
+		height:103px;
+		padding:30px 0 30px 20px;
+	}
+	.item{
+	
+		font-size: 16px;
+	}
+	.noiseLi+.noiseLi{
+		border-top:1px solid #e3e3e3;
+	}
+	.quliIcon,.numIcon,.lengIcon{
+		width:30px;
+		height:30px;
+	}
+	.quliIcon{
+		background: url(../images/index/u2077.png) no-repeat;
+		background-size:100%;
+	}
+	.numIcon{
+		background: url(../images/index/u2073.png) no-repeat;
+		background-size:100%;
+	}
+	.lengIcon{
+		background: url(../images/index/u2075.png) no-repeat;
+		background-size:100%;
+	}
+}
+
