--- a/css/indexPlus.less
+++ b/css/indexPlus.less
@@ -93,7 +93,7 @@
 	height: 13px;	
 	margin-right: 5px;
     position: relative;
-    top: 9px;
+    top: 2px;
 }
 .downIcon{
 	background: url(../images/index/yyl_down.png) no-repeat;
@@ -114,6 +114,19 @@
 
 .noise-info1{
 	height: 310px;
+	.pieTu_con{
+		position: relative;
+	}
+	.orangeback{
+		position: absolute;
+		width: 230px;
+		height: 230px;
+		border-radius: 50%;
+		background: #eec60a;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%,-50%);
+	}
 }
 .rightDes{
 	width:260px;
@@ -135,6 +148,8 @@
 	.quliIcon,.numIcon,.lengIcon{
 		width:30px;
 		height:30px;
+		position: relative;
+        top: 9px;
 	}
 	.quliIcon{
 		background: url(../images/index/u2077.png) no-repeat;
@@ -149,4 +164,19 @@
 		background-size:100%;
 	}
 }
+.noise-info1{
+	.pieTu_con{
+		padding:0 20px;
+	}
+}
+.noise-info2,.noise-info3{
+	padding:0 20px;
+}
+.noise-echarts1,.noise-echarts2,.noise-echarts3{
+	width: 100%;
+
+	height: 305px;
+	border:1px solid red;
+}
+
 
