--- a/css/indexPlus.less
+++ b/css/indexPlus.less
@@ -127,6 +127,25 @@
 		top: 50%;
 		transform: translate(-50%,-50%);
 	}
+	.valueCon{
+		position: absolute;
+		z-index: 10;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%,-50%);
+		text-align: center;
+		.valueText{
+			color:#fff;
+			font-size: 32px;
+			font-weight: 700;
+			line-height: 40px;
+		}
+		.valueDes{
+			color:#fff;
+			font-size:16px;
+			font-weight: 700;
+		}
+	}
 }
 .rightDes{
 	width:260px;
@@ -175,6 +194,8 @@
 .noise-echarts1,.noise-echarts2,.noise-echarts3{
 	width: 100%;
 	height: 305px;
+	z-index: 1;
 }
+
 
 
