--- a/css/index.css
+++ b/css/index.css
@@ -853,15 +853,22 @@ img {
 	color: #ffffff;
 }
 
-.air-info-tab {
+.air-info-tab,.air-info-type {
 	width: 350px;
 	height: 26px;
 	border: 1px solid #c8dfeb;
 	border-radius: 13px;
 	overflow: hidden;
 }
-
-.air-info-tab li {
+.air-info-type{
+	position: absolute;
+	top: 24px;
+	width: 140px;
+	top: 41px;
+	left: 18px;
+	z-index: 2;
+}
+.air-info-tab li,.air-info-type li {
 	flex: 1;
 	cursor: pointer;
 	width: 50%;
@@ -873,7 +880,7 @@ img {
 	text-align: center;
 }
 
-.air-info-tab li.active {
+.air-info-tab li.active,.air-info-type li.active{
 	color: #079fed;
 	background: #e4eef4;
 }
@@ -883,7 +890,7 @@ img {
 	height: 100%;
 }
 
-.air-info2 .air-info-tab {
+.air-info2 .air-info-tab{
 	position: absolute;
 	right: 18px;
 	top: 7px;
@@ -1187,7 +1194,7 @@ img {
 	height: 7px;
 	background: url(../images/index/6.png) no-repeat;
 	position: absolute;
-	top: 34px;
+	top: 33px;
 	left: -1px;
 }
 
