--- a/css/indexPlus.css
+++ b/css/indexPlus.css
@@ -122,6 +122,25 @@
   top: 50%;
   transform: translate(-50%, -50%);
 }
+.noise-info1 .valueCon {
+  position: absolute;
+  z-index: 10;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.noise-info1 .valueCon .valueText {
+  color: #fff;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 40px;
+}
+.noise-info1 .valueCon .valueDes {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+}
 .rightDes {
   width: 260px;
   border-left: 1px solid #e3e3e3;
@@ -168,4 +187,5 @@
 .noise-echarts3 {
   width: 100%;
   height: 305px;
+  z-index: 1;
 }
