--- a/css/index.css
+++ b/css/index.css
@@ -6,17 +6,25 @@
 	-webkit-box-sizing: border-box;
 }
 
-html,
+html{
+	width:100%;
+	height:100%;
+}
 body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Microsoft yahei';
 	height: 100%;
 	min-height: 100%;
-	/*width: 1600px;*/
-	min-width: 1360px;
+	min-width: 1344px;
+	overflow-x: hidden;
 }
-
+.body1{
+	overflow-y: scroll;
+}
+.body1::-webkit-scrollbar,.body2::-webkit-scrollbar {
+	display: none;
+}
 ul,
 li,
 span,
@@ -813,7 +821,6 @@ img {
 .air-info1 .air-forecast-list li {
 	overflow: hidden;
 	border: 1px solid #37bbf7;
-	
 	text-align: center;
 	background: #28abe6;
 }
