--- a/css/map.css
+++ b/css/map.css
@@ -38,16 +38,18 @@ table{
 	-ms-box-sizing: border-box;
 }
 
-html,
+html{
+	width:100%;
+	height:100%;
+}
 body {
 	padding: 0;
 	margin: 0;
 	font-family: 'Microsoft yahei';
 	height: 100%;
 	min-height: 100%;
-	min-width: 1360px;
-	position: relative;
-	/*width: 1600px;*/
+	min-width: 1344px;
+	overflow: hidden;
 }
 
 ul,
@@ -129,6 +131,8 @@ img {
 .header .nav ul li img {
 	margin-right: 2px;
 	vertical-align: -3px;
+	width:19px;
+	height:19px;
 }
 
 .people-info {
@@ -177,12 +181,12 @@ img {
 .map {
 	position: absolute;
 	left: 0;
-	top: 0;
+	right: 0;
 	z-index: 1;
 	width: 100%;
 	height: 100%;
-	background: url(../images/map/map.jpg) no-repeat;
-	background-size: 100% 100%;
+	background: url(../images/map/map.png) no-repeat;
+    background-size: 100% 100%;
 }
 
 .map-time {
@@ -261,33 +265,36 @@ img {
 }
 
 .map-layer-seach {
-	width: 260px;
+	width: 160px;
+    left: 450px;
 	position: absolute;
-	right: 858px;
 	top: 17px;
 	z-index: 2;
 }
 
 .map-layer-seach .tab {
 	height: 40px;
-	line-height: 40px;
 	background: #ffffff;
 	overflow: hidden;
-	border-radius: 5px;
 }
 
 .map-layer-seach .tab li {
 	float: left;
-	width: 33.3%;
+	width: 50%;
+	height: 38px;
+    line-height: 38px;
 	font-size: 14px;
 	color: #333333;
 	text-align: center;
 	cursor: pointer;
-	border-right: 1px solid #f0f0f0;
+	border: 1px solid #079fed;
 }
-
+.map-layer-seach .tab li:first-child {
+	border-radius:3px  0  0 3px ;
+}
 .map-layer-seach .tab li:last-child {
-	border: none;
+	border-left: none;
+	border-radius: 0 3px 3px 0;
 }
 
 .map-layer-seach .tab li.active {
@@ -296,6 +303,7 @@ img {
 }
 
 .map-layer-seach .tab-main {
+	width: 420px;
 	background: #ffffff;
 	overflow: hidden;
 	border-radius: 5px;
@@ -308,6 +316,7 @@ img {
 }
 
 .map-layer-seach .tab-main-checkbox p {
+	min-width: 63px;
 	float: left;
 	font-size: 12px;
 	color: #666666;
@@ -357,19 +366,34 @@ img {
 }
 
 .map-widgets1 li.two {
-	background: #fff url(../images/map/mapicon2-off.png) no-repeat center center;
+	/* background: #fff url(../images/map/mapicon2-off.png) no-repeat center center; */
+	background: #fff url(../images/map/mapicon4-off.png) no-repeat center center;
+	
 }
 
 .map-widgets1 li.two.active {
-	background: #fff url(../images/map/mapicon2-on.png) no-repeat center center;
+	/* background: #fff url(../images/map/mapicon2-on.png) no-repeat center center; */
 }
 
 .map-widgets1 li.three {
-	background: #fff url(../images/map/mapicon3-off.png) no-repeat center center;
+	/* background: #fff url(../images/map/mapicon3-off.png) no-repeat center center; */
+	background: #fff url(../images/map/mapicon5-off.png) no-repeat center center;
+	
 }
 
 .map-widgets1 li.three.active {
-	background: #fff url(../images/map/mapicon3-on.png) no-repeat center center;
+	/* background: #fff url(../images/map/mapicon3-on.png) no-repeat center center; */
+}
+
+.map-widgets1 li.four{
+	background: #fff url(../images/map/mapicon6-off.png) no-repeat center center;
+}
+.map-widgets1 li.five {
+	background: #fff url(../images/map/mapicon7-off.png) no-repeat center center;
+}
+
+.map-widgets1 li.five.active {
+	background: #fff url(../images/map/mapicon7-on.png) no-repeat center center;
 }
 
 .map-widgets-layer {
@@ -548,7 +572,7 @@ img {
 	background: #fff url(../images/map/mapicon7-on.png) no-repeat center center;
 }
 
-.map-widgets3 .legend {
+.map-widgets3 .legend ,.map-widgets1 .legend{
 	position: absolute;
 	bottom: 0;
 	/*top: 0;*/
@@ -563,7 +587,7 @@ img {
 	display: none;
 }
 
-.map-widgets3 .legend .title {
+.map-widgets3 .legend .title,.map-widgets1 .legend .title{
 	font-size: 14px;
 	color: #999999;
 	text-align: center;
@@ -572,17 +596,17 @@ img {
 	clear: both;
 }
 
-.map-widgets3 .legend ul {
+.map-widgets3 .legend ul,.map-widgets1 .legend ul {
 	overflow: hidden;
 }
 
-.map-widgets3 .legend ul li {
+.map-widgets3 .legend ul li,.map-widgets1 .legend ul li {
 	float: left;
 	width: 33.3%;
 	height: auto;
 }
 
-.map-widgets3 .legend ul li p {
+.map-widgets3 .legend ul li p,.map-widgets1 .legend ul li p {
 	font-size: 14px;
 	color: #666666;
 	overflow: hidden;
@@ -591,7 +615,7 @@ img {
 	margin: 0 23px;
 }
 
-.map-widgets3 .legend ul li p img {
+.map-widgets3 .legend ul li p img,.map-widgets1 .legend ul li p img{
 	width: 18px;
 	height: 18px;
 	float: right;
@@ -599,7 +623,7 @@ img {
 }
 
 .map-alert{
-	width: 453px;
+	width: 410px;
 	border-radius: 3px;
 	overflow: hidden;
 	position: fixed;
@@ -618,7 +642,7 @@ img {
 	float: left;
 	color: #fff;
 	font-size: 16px;
-	width: 395px;
+	width: 362px;
 }
 .map-alert .map-alert-title p a{
 	float: right;
@@ -634,27 +658,28 @@ img {
 	margin-top: 13px;
 }
 .map-alert-main{
+	padding: 0 20px;
 	background: #fff;
 	border: 1px solid #cbcbcb;
 	border-top: none;
 	border-radius: 0 0 5px 5px;
 }
 .map-alert-main .dl1{
-	height: 80px;
-	overflow: hidden;
-	padding: 5px 18px 0;
+	height: 110px;
+    overflow: hidden;
+    padding: 25px 0;
 }
 .map-alert-main .dl1 dt{
 	float: left;
-	width: 82px;
-	height: 72px;
-	text-align: center;
+    width: 90px;
+    text-align: center;
+    border-radius: 14px;
 }
 .map-alert-main .dl1 dt p{
-	font-size: 20px;
-    color: #333333;
-    height: 54px;
-    line-height: 74px;
+	font-size: 16px;
+    color: #fff;
+    height: 62px;
+    line-height: 62px;
 }
 .map-alert-main .dl1 dt span{
 	font-size: 14px;
@@ -666,8 +691,27 @@ img {
 .map-alert-main .dl1 dt.rank2{
 	background: url(../images/map/tc_aqi2.png) no-repeat;
 }
+.oneLevel{
+	background: rgb(0,228,0);
+}
+.twoLevel{
+	background: rgb(255,255,0);
+}
+.threeLevel{
+	background: rgb(255,126,0);
+}
+.fourLevel{
+	background: rgb(255,0,0);
+}
+.fiveLevel{
+	background: rgb(153,0,76);
+}
+.sixLevel{
+	background: rgb(126,35);
+}
+
 .map-alert-main .dl1 dt.rank3{
-	background: url(../images/map/tc_aqi3.png) no-repeat;
+	/* background: url(../images/map/tc_aqi3.png) no-repeat; */
 }
 .map-alert-main .dl1 dt.rank4{
 	background: url(../images/map/tc_aqi4.png) no-repeat;
@@ -680,27 +724,48 @@ img {
 }
 .map-alert-main .dl1 dd{
 	float: right;
-	width: 325px;
-	position: relative;
-	padding-top: 8px;
+    width: 242px;
+    position: relative;
 }
 .map-alert-main .dl1 dd .time{
-	font-size: 12px;
-	color: #999999;
-	float: right;
-	position: absolute;
-	right: 0;
-	top: 6px;
+	font-size: 13px;
+    color: #999999;
+    line-height: 22px;
 }
 .map-alert-main .dl1 dd .word{
 	font-size: 14px;
-	color: #333333;
-	line-height: 30px;
+    color: #333333;
+    line-height: 20px;
 }
 .map-alert-main .dl1 dd .word span{
 	color: #666;
 }
 
+.air-info-type{
+	margin: 0 0 10px 0;
+    width: 140px;
+    height: 26px;
+    border: 1px solid #c8dfeb;
+    border-radius: 13px;
+    overflow: hidden;
+    z-index: 2;
+}
+.air-info-type li {
+	flex: 1;
+	cursor: pointer;
+	width: 50%;
+	height: 26px;
+	line-height: 24px;
+	font-size: 14px;
+	color: #333333;
+	float: left;
+	text-align: center;
+}
+
+.air-info-type li.active{
+	color: #079fed;
+	background: #e4eef4;
+}
 .map-alert-main .ul1{
 	overflow: hidden;
 	border-bottom: 3px solid #f2f2f2;
@@ -735,6 +800,7 @@ img {
 	padding: 0 18px;
 	position: relative;
 	z-index: 2;
+	border-top: 1px solid #e3e3e3;
 }
 .map-alert-echarts-title p{
 	float: left;
@@ -880,6 +946,11 @@ img {
     font-size: 16px;
     text-align: center;
 }
+.map-info-header .canvasFont span{
+	color: #fff;
+    padding: 2px 4px;
+    border-radius: 5px;
+}
 .map-info-header .canvasAdd{
 	width:210px;
 	position: absolute;
@@ -903,12 +974,7 @@ img {
 	clear: both;
 	margin-bottom: 10px;
 }
-.warnFont{
-	background: #ff0000;
-    color: #fff;
-    padding: 2px 4px;
-    border-radius: 5px;
-}
+
 .noiseList{
 	flex: 1;
 	padding: 0 0 0 50px;
@@ -986,7 +1052,7 @@ img {
 }
 
 .map-tab-main {
-	padding: 0 20px;
+	padding: 0 10px;
 }
 .districtCon{
 	border-top: 1px solid #eee;
@@ -1095,17 +1161,7 @@ img {
 	border-radius: 2px;
 }
 
-.greenFont{
-	background: #00c700;
-}
 
-.orangeFont{
-	background: #dfb42d;
-}
-
-.warnFontTd{
-	background: #dd7000;
-}
 .upTd{
 	color:#33a489;
 }
@@ -1210,8 +1266,8 @@ img {
 	line-height: 41px;
 	border-bottom: 2px solid #efefef;
 }
-.td1{
-	
+.td1,.td3{
+	width: 60px;
 }
 .table td a {
 	color: #666666;
