--- a/css/index-plus.css
+++ b/css/index-plus.css
@@ -32,10 +32,11 @@
 .navLi img {
   display: block;
   margin: 2px auto;
+  width: 22px;
 }
 .navLi .navTheme {
-  line-height: 26px;
-  height: 26px;
+  line-height: 23px;
+  height: 23px;
   font-size: 16px;
   padding: 0 10px;
   color: #ffffff;
@@ -47,7 +48,7 @@
   width: 300px;
 }
 .right_des .name {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 22px;
   margin-top: 7px;
   color: #333;
@@ -55,17 +56,17 @@
   text-align: center;
 }
 .right_des .dec_ul {
-  margin-top: 58px;
+  margin-top: 50px;
   padding: 0 35px;
 }
 .right_des .dec_ul .dec_li {
-  margin-top: 30px;
-  height: 52px;
+  margin-top: 24px;
   line-height: 26px;
   font-size: 14px;
 }
 .right_des .orange {
   color: #ff9900;
+  font-weight: 700;
 }
 .pieTu_con .pieTu_con_center {
   width: 170px;
