--- a/css/index-plus.less
+++ b/css/index-plus.less
@@ -31,11 +31,11 @@
 	img{
 		display: block;
 		margin: 2px auto;
-
+        width: 22px;
 	}
 	.navTheme{
-		line-height: 26px;
-        height: 26px;
+		line-height: 23px;
+        height: 23px;
 		font-size: 16px;
 		padding: 0 10px;
 		color: #ffffff;
@@ -49,7 +49,7 @@
 .right_des{
 	width:300px;
 	.name{
-		font-size: 18px;
+		font-size: 14px;
 		line-height: 22px;
 		margin-top: 7px;
 		color: #333;
@@ -57,17 +57,17 @@
 		text-align: center;
 	}
 	.dec_ul{
-		margin-top: 58px;
+		margin-top: 50px;
 		padding:0 35px;
 		.dec_li{
-			margin-top: 30px;
-			height: 52px;
+			margin-top: 24px;
 			line-height: 26px;
 			font-size: 14px;
 		}
 	}
 	.orange{
 		color:#ff9900;
+		font-weight: 700;
 	}
 }
 .pieTu_con{
