--- a/css/map.css
+++ b/css/map.css
@@ -577,9 +577,9 @@ img {
 	bottom: 0;
 	/*top: 0;*/
 	right: 51px;
-	width: 383px;
+	width: 140px;
 	/*height: 225px;*/
-	padding-bottom: 5px;
+	padding-bottom: 10px;
 	border: 1px solid #e1e1e1;
 	border-radius: 2px;
 	background: #fff;
@@ -602,7 +602,7 @@ img {
 
 .map-widgets3 .legend ul li,.map-widgets1 .legend ul li {
 	float: left;
-	width: 33.3%;
+	/* width: 33.3%; */
 	height: auto;
 }
 
@@ -621,7 +621,34 @@ img {
 	float: right;
 	margin-top: 4px;
 }
-
+.sectionMark{
+	display: inline-block;
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
+    text-align: center;
+    border-radius: 50%;
+	margin-right:7px;
+	color:#fff;
+}
+.pollMark{
+	display: inline-block;
+    width: 22px;
+    height: 10px;
+    border-radius: 4px;
+    margin-right: 7px;
+    position: relative;
+    top: -1px;
+}
+.contLevel{
+	background: #fd8000;
+}
+.provLevel{
+	background: #01e300;
+}
+.cityLevel{
+	background: #dc4100;
+}
 .map-alert{
 	width: 410px;
 	border-radius: 3px;
@@ -707,7 +734,7 @@ img {
 	background: rgb(153,0,76);
 }
 .sixLevel{
-	background: rgb(126,35);
+	background: rgb(126,0,35);
 }
 
 .map-alert-main .dl1 dt.rank3{
@@ -1076,7 +1103,7 @@ img {
 .map-tab-main .city-name li,.map-tab-main .section-name li {
 	float: left;
     font-size: 13px;
-    color: #161616;
+    color: #000;
     cursor: pointer;
     margin: 8px 12px 0;
 }
@@ -1086,6 +1113,7 @@ img {
 }
 .map-tab-main .city-name li.active,.map-tab-main .section-name li.active {
 	color: #00a4ff;
+	font-weight: 700;
 }
 
 .map-tab-main .search {
@@ -1265,6 +1293,41 @@ img {
 	height: 41px;
 	line-height: 41px;
 	border-bottom: 2px solid #efefef;
+}
+.TableIconBox{
+	display: inline-block;
+	width:1rem;
+	height:.8rem;
+	position: relative;
+	left: 1px;
+    top: 0px;
+	cursor: pointer;
+}
+/*向上*/
+.triangle_border_up{
+	width:0;
+	height:0;
+	border-width:0 .25rem .25rem;
+	border-style:solid;
+	border-color:transparent transparent #333;/*透明 透明  灰*/
+	margin:3px auto;
+	position:relative;
+}
+/*向下*/
+.triangle_border_down{
+	width:0;
+	height:0;
+	border-width:.25rem .25rem 0;
+	border-style:solid;
+	border-color:#333 transparent transparent;/*灰 透明 透明 */
+	margin:3px auto;
+	position:relative;
+}
+.triangle_border_up.active{
+	border-color:transparent transparent #00cffc;/*透明 透明  灰*/
+}
+.triangle_border_down.active{
+	border-color:#00cffc transparent transparent;/*灰 透明 透明 */
 }
 .td1,.td3{
 	width: 60px;
